--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Jasmine Matsumoto
-title: Stinky Sister
+title: The Stench
 email: Your email (optional)
 # email_title: Email (Email title override)
 phone: Your phone number (optional)
