--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ version: 2
 
 # Personal info
 name: Jasmine Matsumoto
-title: The Stench
-email: Your email (optional)
+title: The
+email: jasminematsumoto1@gmail.com
 # email_title: Email (Email title override)
-phone: Your phone number (optional)
+phone: 925-997-1619
 # phone_title: Phone (Phone title override)
 website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
@@ -20,7 +20,7 @@ darkmode: false
 
 # Social links
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  jasminematsumoto
 stackoverflow_username: "00000001"
 dribbble_username: jekyll
 facebook_username: jekyll
@@ -83,19 +83,22 @@ content:
     layout: list
     content:
       - layout: right
-        title: Company name
-        sub_title: Job title
-        caption: Date Range (eg. November 2016 - present)
+        title: California State University Fullerton
+        sub_title: Research Intern
+        caption: Date Range (eg. June 2021 - Present)
         link: Link to company (optional)
         quote: >
           Short description of the company (optional)
         description: | # this will include new lines to allow paragraphs
-          Description of role
+          Utilized research skills on faculty-led health projects
+          -Tested hypotheses paired with current methods to answer questions about health and disease
+          -Analyzed data to create oral and writeen reports about mental health as a research topic
+          -Conducted searches of databases to create analysis and literature reviews
   - title: Education
     layout: list
     content:
       - layout: top-right
-        title: Institution name
+        title: California State University Fullerton
         sub_title: Qualifications (eg. BA Performing Arts)
         caption: Date Range (eg. 2016 - 2019)
         quote: >
