--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: jasminematsumoto1@gmail.com
 # email_title: Email (Email title override)
 phone: 925-997-1619
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
+website: jasminematsumoto.github.io
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
@@ -35,9 +35,9 @@ linkedin_username: jekyll
 
 # Additional icon links
 additional_links:
-- title: Link name
-  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-  url: Link url (eg. https://google.com)
+# - title: Link name
+#   icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+#   url: Link url (eg. https://google.com)
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
@@ -104,7 +104,7 @@ content:
           Short institution or course description (optional)
         description: | # this will include new lines to allow paragraphs
           Description of qualification
-  - title: A Little More About Me
+  - title: Skills/Certfications
     layout: text
     content: | # this will include new lines to allow paragraphs
       This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
