--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Jasmine Matsumoto
-title: The
+# title: The
 email: jasminematsumoto1@gmail.com
 # email_title: Email (Email title override)
 phone: 925-997-1619
